@@ -63,7 +63,6 @@ extern UV carmichael_lambda(UV n);
 extern UV jordan_totient(UV k, UV n);
 extern UV znprimroot(UV n);
 extern UV znorder(UV a, UV n);
-extern UV znlog(UV a, UV g, UV p);
 
 extern IV stirling2(UV n, UV m);
 extern IV stirling1(UV n, UV m);
