@@ -10,6 +10,10 @@ Revision history for Perl module Math::Prime::Util
     - vecextract(\@arr, mask)   Return elements from arr selected by mask
     - ramanujan_primes(lo,hi)   Ramanujan primes R_n in [lo,hi]
 
+    [FUNCTIONALITY AND PERFORMANCE]
+
+    - Small speedups for znlog.
+
     [Misc]
 
     - Changes to nth_prime_{lower,upper}.  They use the Axler (2013) bounds,
